# RoveSoPnP_Vision

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.devcontainer/: Ubuntu.dockerfile  devcontainer.json
data/Custom_Dictionaries/: Autonomy-Dictionary.txt
src/: Constants.cpp  Constants.h  Logging.cpp  Logging.h  main.cpp
src/interfaces/: AutonomyThread.hpp  BasicCamera.hpp  Camera.hpp  README.md  Thread.hpp
src/util/: IPS.hpp  NumberOperations.hpp  TimeOperations.hpp
src/util/vision/: CameraModels.hpp  FetchContainers.hpp  ImageOperations.hpp
src/vision/algorithms/: CameraCalibration.hpp  ComponentDetector.hpp  FicucialDetector.hpp  PixelTo3D.hpp  PlacementVerifier.hpp  VisualHoming.hpp
src/vision/cameras/: BasicCam.cpp  BasicCam.h
